refactor: symplify tests methods